--- a/portfolio.html
+++ b/portfolio.html
@@ -254,6 +254,23 @@
     
                 </ul>
             </div>
+            <div class="container footer-form">
+                <h6 class="footer-soc-title">Subscribe</h6>
+                <form class="subscribe-form">
+                    <input type="text" 
+                    class="subscribe-input"
+                    name="subscribe-email"
+                    placeholder="E-mail"/>
+                    <button type="submit" class="subscribe-btn">Subscribe
+                        <span>
+                            <svg class="submit-btn-icon" width="24" height="20">
+                                <use href="./images/icons.svg#icon-Frame-3-1"></use>
+                            </svg>
+                        </span>
+                    </button>
+                </form>
+                
+            </div>
         </div>
         </footer>
 </body>
