--- a/index.html
+++ b/index.html
@@ -365,9 +365,26 @@
 
             </ul>
         </div>
+        <div class="container footer-form">
+            <h6 class="footer-soc-title">Subscribe</h6>
+            <form class="subscribe-form">
+                <input type="text" 
+                class="subscribe-input"
+                name="subscribe-email"
+                placeholder="E-mail"/>
+                <button type="submit" class="subscribe-btn">Subscribe
+                    <span>
+                        <svg class="submit-btn-icon" width="24" height="20">
+                            <use href="./images/icons.svg#icon-Frame-3-1"></use>
+                        </svg>
+                    </span>
+                </button>
+            </form>
+            
+        </div>
     </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden"  data-modal>
         <div class="modal">
             <button class="modal-close"  type="button" data-modal-close>
                 <svg class="modal-close-icon" width="24" height="24">
@@ -375,6 +392,81 @@
                     </use>
                 </svg>   
             </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                
+                <div class="modal-field">  
+                <label class="modal-input-text">
+                    <span class="modal-label-text">Name</span>
+                </label>
+                      <span class="input-wrap">
+                <input type="text" 
+                class="modal-input" 
+                name="user-name" 
+                placeholder="Name"
+                required
+                />
+                <svg class="modal-intput-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
+                </svg>
+                     </span>
+                </div>
+                <div class="modal-field">
+                <label class="modal-input-text">
+                    <span class="modal-label-text">Phone</span>
+                </label>
+                     <span class="input-wrap">
+                <input type="text" 
+                class="modal-input" 
+                name="user-tel" 
+                type="tel"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                title="099-999-9999"
+                placeholder="Phone"
+                required
+                />
+                <svg class="modal-intput-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
+                </svg>
+                     </span>
+                </div>
+                <div class="modal-field">
+                <label class="modal-input-text">
+                    <span class="modal-label-text">Email</span>
+                </label>
+                      <span class="input-wrap">
+                <input type="text" 
+                class="modal-input" 
+                name="user-email" 
+                placeholder="Email"
+                />
+                <svg class="modal-intput-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
+                </svg>
+                       </span>
+                </div>
+                <div class="modal-field">
+                    <label class="modal-input-text" for="user-text">
+                        <span class="modal-label-text">Comment</span>
+                    </label>
+                          <textarea name="user-text" 
+                          id="user-text" 
+                          class="modal-comment"
+                          placeholder="Text input" 
+                          ></textarea>
+                </div>
+                <div class="modal-field">
+                    <input 
+                    class="modal-check visually-hidden"
+                    id="policy"
+                    name="policy" 
+                    type="checkbox" 
+                    value="true" 
+                    required/>
+                <label for="policy" class="check-text">I accept the terms and conditions of the <a href=""> Privacy Policy</a></label>
+                </div>
+                <button type="submit" class="modal-btn">Send</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
