--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                     type="checkbox" 
                     value="true" 
                     required/>
-                <label for="policy" class="check-text">I accept the terms and conditions of the <a href=""> Privacy Policy</a></label>
+                <label for="policy" class="check-text">I accept the terms and conditions of the <a href="" class="modal-link"> Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-btn">Send</button>
             </form>
